# cosmwebwasm

./: Cargo.toml  cosmwasmception.wasm  flake.nix  index.html  index.js
pkg/: cosmwebwasm.js
src/: bind.rs  lib.rs  vm.rs
