[package]
name = "cosmwebwasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-vm = { git = "https://github.com/ComposableFi/cosmwasm-vm", rev = "0029762d83e1421ca8407761c2a4c819bdbcd8d9", features = [ "iterator" ]}
cosmwasm-vm-wasmi = { git = "https://github.com/ComposableFi/cosmwasm-vm", rev = "0029762d83e1421ca8407761c2a4c819bdbcd8d9", features = [ "iterator" ]}
cosmwasm-minimal-std = { git = "https://github.com/ComposableFi/cosmwasm-vm", rev = "0029762d83e1421ca8407761c2a4c819bdbcd8d9", features = [ "iterator" ] }
wasmi = { git = "https://github.com/ComposableFi/wasmi", rev = "cd8c0c775a1d197a35ff3d5c7d6cded3d476411b", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
wasm-instrument = "0.2"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.4.3"
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
